# src/Modules/ExitLogs/DTOs/CreateExitLogDTO.php
@@ -7,7 +7,8 @@ final class CreateExitLogDTO
     public function __construct(
         public readonly string $sku,
         public readonly int $quantity,
-        public readonly ?string $note
+        public readonly ?string $note,
+        public readonly ?string $compartmentPublicId
     ) {
     }
 }
